fix curve plot overlap (birthday)

--- a/dataviz/birthday/style.css
+++ b/dataviz/birthday/style.css
@@ -32,7 +32,7 @@ p {
   justify-content: center;
   align-items: center;
   transition: opacity 1s ease;
-  z-index: 1;
+  z-index: 10;
 }
 
 .preload h3 {
